[package]
name = "thedos"
version = "0.1.0"
edition = "2021"



[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
borsh = "0.9.3"
futures = "0.3"
serde_json = "1"
pretty_env_logger = "0.4"
dotenv = "0.15"
is_type = "0.2.1"
log = "0.4"
regex = "1.6.0"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log4rs = "1.1.1"
clap = { version = "4", features = ["derive"] }
tokio-cron-scheduler = "0.8.1"





[lib]
# libraries don't have entry points, you can't run them,they're used for functionality sharing like binding a .wasm into js codes
# we need lib.rs and crate type of cdylib for none binary like .wasm, .so, .dylib and .dll files
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"





[[bin]]
name = "thedos"
path = "src/cry.rs"